@@ -7,48 +7,47 @@ import { SugarElement, SugarLocation, SugarPosition } from '@ephox/sugar';
 //       or the document that is a common ancestor of both the content tables and the
 //       resize bars ('parent') and so will listen to events from both (eg, iframe mode)
 // origin: the offset for the point to display the bars in the appropriate position
+// isResizable: a callback that determines if the table and the provided element can be resized using the resize bars
 
-type CanResizeCallback = (table: SugarElement<HTMLTableElement>, elm: SugarElement<Element>) => boolean;
+type ResizeCallback = (table: SugarElement<HTMLTableElement>, elm: SugarElement<Element>) => boolean;
 
 export interface ResizeWire {
   parent: () => SugarElement;
   view: () => SugarElement;
   origin: () => SugarPosition;
-  canResize: CanResizeCallback;
+  isResizable: ResizeCallback;
 }
 
 
-const only = function (element: SugarElement, canResize: CanResizeCallback): ResizeWire {
+const only = function (element: SugarElement, isResizable: ResizeCallback): ResizeWire {
   // If element is a 'document', use the document element ('HTML' tag) for appending.
   const parent = Optional.from(element.dom.documentElement).map(SugarElement.fromDom).getOr(element);
   return {
     parent: Fun.constant(parent),
     view: Fun.constant(element),
     origin: Fun.constant(SugarPosition(0, 0)),
-    canResize
+    isResizable
   };
 };
 
-const detached = function (editable: SugarElement, chrome: SugarElement, canResize: CanResizeCallback): ResizeWire {
+const detached = function (editable: SugarElement, chrome: SugarElement, isResizable: ResizeCallback): ResizeWire {
   const origin = () => SugarLocation.absolute(chrome);
   return {
     parent: Fun.constant(chrome),
     view: Fun.constant(editable),
     origin,
-    canResize
+    isResizable
   };
 };
 
-const body = function (editable: SugarElement, chrome: SugarElement, canResize: CanResizeCallback): ResizeWire {
+const body = function (editable: SugarElement, chrome: SugarElement, isResizable: ResizeCallback): ResizeWire {
   return {
     parent: Fun.constant(chrome),
     view: Fun.constant(editable),
     origin: Fun.constant(SugarPosition(0, 0)),
-    canResize
+    isResizable
   };
 };
-
-// TODO: attach callback to wire?
 
 export const ResizeWire = {
   only,
