@@ -1,5 +1,5 @@
 import { assert } from '@ephox/bedrock-client';
-import { Arr, Optional, Optionals } from '@ephox/katamari';
+import { Arr, Fun, Optional, Optionals } from '@ephox/katamari';
 import { PlatformDetection } from '@ephox/sand';
 import { Attribute, Css, Hierarchy, Html, Insert, Remove, SelectorFilter, SugarBody, SugarElement, Traverse } from '@ephox/sugar';
 import { Generators, SimpleGenerators } from 'ephox/snooker/api/Generators';
@@ -16,7 +16,7 @@ type Op<T> = (
   generators: Generators,
 ) => Optional<RunOperationOutput>;
 
-const canResize = (table: SugarElement<HTMLTableElement>, elm: SugarElement<Element>) => Arr.forall([ table, elm ], (el) => Attribute.get(el, 'data-mce-resize') !== 'false');
+const isResizable = Fun.always;
 
 const checkOld = (
   expCell: { section: number; row: number; column: number },
@@ -29,7 +29,7 @@ const checkOld = (
 ) => {
   const table = SugarElement.fromHtml<HTMLTableElement>(input);
   Insert.append(SugarBody.body(), table);
-  const wire = ResizeWire.only(SugarBody.body(), canResize);
+  const wire = ResizeWire.only(SugarBody.body(), isResizable);
   const result = operation(wire, table, {
     element: Hierarchy.follow(table, [ section, row, column, 0 ]).getOrDie()
   }, Bridge.generators);
@@ -60,7 +60,7 @@ const checkPaste = (
 ) => {
   const table = SugarElement.fromHtml<HTMLTableElement>(input);
   Insert.append(SugarBody.body(), table);
-  const wire = ResizeWire.only(SugarBody.body(), canResize);
+  const wire = ResizeWire.only(SugarBody.body(), isResizable);
 
   const pasteTable = SugarElement.fromHtml<HTMLTableElement>('<table><tbody>' + pasteHtml + '</tbody></table>');
   operation(
@@ -92,7 +92,7 @@ const checkStructure = (
 ) => {
   const table = SugarElement.fromHtml<HTMLTableElement>(input);
   Insert.append(SugarBody.body(), table);
-  const wire = ResizeWire.only(SugarBody.body(), canResize);
+  const wire = ResizeWire.only(SugarBody.body(), isResizable);
   const result = operation(wire, table, {
     element: Hierarchy.follow(table, [ section, row, column, 0 ]).getOrDie()
   }, Bridge.generators);
@@ -121,7 +121,7 @@ const checkDelete = (
 ) => {
   const table = SugarElement.fromHtml<HTMLTableElement>(input);
   Insert.append(SugarBody.body(), table);
-  const wire = ResizeWire.only(SugarBody.body(), canResize);
+  const wire = ResizeWire.only(SugarBody.body(), isResizable);
   const cellz = Arr.map(cells, (cell) =>
     Hierarchy.follow(table, [ cell.section, cell.row, cell.column, 0 ]).getOrDie('Could not find cell')
   );
@@ -175,7 +175,7 @@ const checkMerge = (
   Insert.append(SugarBody.body(), expectedDom);
   Insert.append(SugarBody.body(), table);
 
-  const wire = ResizeWire.only(SugarBody.body(), canResize);
+  const wire = ResizeWire.only(SugarBody.body(), isResizable);
   const target = Bridge.targetStub(selection, bounds, table);
   const generators = Bridge.generators;
 
@@ -202,7 +202,7 @@ const checkUnmerge = (
 ) => {
   const table = SugarElement.fromHtml<HTMLTableElement>(input);
   Insert.append(SugarBody.body(), table);
-  const wire = ResizeWire.only(SugarBody.body(), canResize);
+  const wire = ResizeWire.only(SugarBody.body(), isResizable);
   const unmergables = Arr.map(unmergablePaths, (path) =>
     Hierarchy.follow(table, [ path.section, path.row, path.column ])
   );
